# flask-dashboard

./: Makefile  README.md  pyproject.toml
src/: config.py  main.py
src/app/: __init__.py  extensions.py
src/app/crud/: user.py
src/app/decorators/: auth_decorators.py
src/app/forms/: settings_form.py
src/app/models/: settings.py  user.py
src/app/routes/: __init__.py  settings.py
src/app/routes/account/: forms.py  routes.py
src/app/routes/admin/: routes.py
src/app/routes/auth/: forms.py  routes.py
src/app/routes/main/: route.py
src/app/routes/users/: routes.py
src/app/static/css/: base.css  forms.css  sidenav.css  theme.css
src/app/static/css/forms/: base.css  style.css
src/app/static/js/: app.js  theme.js
src/app/templates/: 404.html  base.html  dashbase.html  index.html  unauthorized.html
src/app/templates/account/: details.html  index.html  security.html  sessions.html
src/app/templates/admin/: index.html  logs.html
src/app/templates/auth/: base.html  login.html  manage_sessions.html  register.html  two_factor.html
src/app/templates/settings/: index.html  ui_settings.html
src/app/templates/users/: add.html  edit.html  index.html  invitations.html  manage_roles.html  register.html  view_roles.html
src/app/templates/utils/: base_form.html
src/app/utils/: email.py  sms.py
